    with an invalid length of 0 in its header.  Changed SoX to warn the
    user but continue instead of aborting since SoX can still read
    the file just fine.
  o Bert van Leeuwen added a file handler for Psion record.app used
    for System/Alarms in some Psion devices.
  o Richard Bannister sent in a patch to make writing vorbis files
    work with Vorbis 1.0 libraries.

sox-12.17.3
-----------
  o Removed check that prevented pan from being invoked when the
    input and output channels were the same.
  o Ciaran Anscomb added a flush to sunaudio driver after changing
    settings.  This is because it can start buffering data as soon
    as the device is open and the buffered data can be in a
    wrong format.
  o trim wasn't accounting for # of channels and was generally broken.
  o Jeff Bonggren fixed trim bugs were it was failing when triming
    data that equaled to BUFSIZ.  Also, trim now immediately returns
    ST_EOF when its done instead of requiring an extra call that
    returns no data.
  o auto effect wasn't rewinding the file if the file was less then
    132 bytes.  Changed auto parsing of header to be incremental
    instead of reading in a large buffer.
  o William Plant pointed out a bad pointer access in fade effect's
    parsing of options.
  o Ken pointed out a problem were private data was not 8-byte aligned
    and causing crashes on most RISC CPU's.  Fixed by going back to
    old style of declaring private data as type "double" which usually
    forces strictest alignment.
  o ima_rw was miscompiling on alpha's because of a header ordering
    problem.
  o Erik de Castro Lopo pointed out that when writing 16-bit VOC files
    the headers did not contain the correct length or encoding type.
  o Seperated st.h into 2 files.  st.h for libst users and st_i.h for
    internal use.
  o Added new types used extensively by libst: st_sample_t & st_size_t.
    This allows for more deterministic behavior on 64-bit machines and